--- a/package.json
+++ b/package.json
@@ -5,26 +5,45 @@
   "main": "index.js",
   "scripts": {
     "testServer": "mocha --compilers js:babel-core/register --require ./test/serverTestHelper.js ./test/server --recursive",
-    "testServer:watch": "npm run testServer -- --watch"
+    "testServer:watch": "npm run testServer -- --watch",
+    "testClient": "mocha --compilers js:babel-core/register --require ./test/clientTestHelper.js ./test/client --recursive",
+    "testClient:watch": "npm run testClient -- --watch"
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "react"
     ]
   },
   "author": "xyh",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^2.5.7",
+    "express": "^4.15.3",
     "immutable": "^3.8.1",
+    "react": "^15.6.1",
+    "react-addons-pure-render-mixin": "^15.6.0",
+    "react-dom": "^15.6.1",
+    "react-mixin": "^3.0.5",
+    "react-redux": "^5.0.5",
     "redux": "^3.7.2",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "chai": "^4.1.0",
     "chai-immutable": "^1.6.0",
-    "mocha": "^3.5.0"
+    "jsdom": "^5.6.1",
+    "mocha": "^3.5.0",
+    "react-addons-test-utils": "^15.6.0",
+    "react-hot-loader": "^1.3.1",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   }
 }
